# cpp-cdogs-sdl

./: .cproject  .gitignore  .project  CMakeLists.txt  cdogs-sdl.make  class  premake5.lua
src/: CMakeLists.txt  animated_counter.cpp  animated_counter.h  autosave.cpp  autosave.h  briefing_screens.cpp  briefing_screens.h  cdogs.cpp  command_line.cpp  command_line.h  credits.cpp  credits.h  emscripten_loop.h  game.cpp  game.h  game_loop.cpp  game_loop.h  hiscores.cpp  hiscores.h  mainmenu.cpp  mainmenu.h  menu.cpp  menu.h  menu_utils.cpp  menu_utils.h  namegen.cpp  namegen.h  password.cpp  password.h  player_select_menus.cpp  player_select_menus.h  prep.cpp  prep.h  prep_equip.cpp  prep_equip.h  screens_end.cpp  screens_end.h  testtttt.cpp  testtttt.h  weapon_menu.cpp  (+1 more)
src/cdogs/: AStar.cpp  AStar.h  CMakeLists.txt  XGetopt.cpp  actor_fire.cpp  actor_fire.h  actor_placement.cpp  actor_placement.h  actors.cpp  actors.h  ai.cpp  ai.h  ai_context.cpp  ai_context.h  ai_coop.cpp  ai_coop.h  ai_utils.cpp  ai_utils.h  algorithms.cpp  algorithms.h  ammo.cpp  ammo.h  animation.cpp  animation.h  automap.cpp  automap.h  blit.cpp  blit.h  bullet_class.cpp  bullet_class.h  c_array.cpp  c_array.h  camera.cpp  camera.h  campaign_entry.cpp  campaign_entry.h  campaigns.cpp  campaigns.h  character.cpp  character.h  (+141 more)
src/cdogs/SDL_JoystickButtonNames/: CMakeLists.txt  SDL_joystickbuttonnames.cpp  SDL_joystickbuttonnames.h  db.h
src/cdogs/c_hashmap/: CMakeLists.txt  hashmap.cpp  hashmap.h
src/cdogs/collision/: collision.cpp  collision.h  minkowski_hex.cpp  minkowski_hex.h
src/cdogs/draw/: char_sprites.cpp  char_sprites.h  draw.cpp  draw.h  draw_actor.cpp  draw_actor.h  draw_buffer.cpp  draw_buffer.h  drawtools.cpp  drawtools.h  nine_slice.cpp  nine_slice.h
src/cdogs/enet/: CMakeLists.txt  callbacks.cpp  compress.cpp  host.cpp  list.cpp  packet.cpp  peer.cpp  protocol.cpp  unix.cpp  win32.cpp
src/cdogs/enet/include/enet/: callbacks.h  enet.h  list.h  protocol.h  unix.h  win32.h
src/cdogs/hud/: fps.cpp  fps.h  gauge.cpp  gauge.h  health_gauge.cpp  health_gauge.h  hud.cpp  hud.h  hud_defs.h  hud_num_popup.cpp  hud_num_popup.h  player_hud.cpp  player_hud.h  wall_clock.cpp  wall_clock.h
src/cdogs/mathc/: .travis.yml  mathc.cpp  mathc.h
src/cdogs/proto/: msg.pb.cpp  msg.pb.h
src/cdogs/proto/nanopb/: pb.h  pb_common.cpp  pb_common.h  pb_decode.cpp  pb_decode.h  pb_encode.cpp  pb_encode.h
src/cdogs/rlutil/: rlutil.h
src/cdogs/yajl/: CMakeLists.txt  yajl.cpp  yajl_alloc.cpp  yajl_alloc.h  yajl_buf.cpp  yajl_buf.h  yajl_bytestack.h  yajl_encode.cpp  yajl_encode.h  yajl_gen.cpp  yajl_lex.cpp  yajl_lex.h  yajl_parser.cpp  yajl_parser.h  yajl_tree.cpp  yajl_version.cpp
src/cdogs/yajl/api/: yajl_common.h  yajl_gen.h  yajl_parse.h  yajl_tree.h  yajl_version.h
src/cdogsed/: CMakeLists.txt  cdogsed.cpp  char_editor.cpp  char_editor.h  editor_brush.cpp  editor_brush.h  editor_ui.cpp  editor_ui.h  editor_ui_cave.cpp  editor_ui_cave.h  editor_ui_color.cpp  editor_ui_color.h  editor_ui_common.cpp  editor_ui_common.h  editor_ui_objectives.cpp  editor_ui_objectives.h  editor_ui_static.cpp  editor_ui_static.h  editor_ui_static_additem.cpp  editor_ui_static_additem.h  editor_ui_weapons.cpp  editor_ui_weapons.h  nk_window.cpp  nk_window.h  tile_brush.cpp  tile_brush.h  ui_object.cpp  ui_object.h
src/cdogsed/osdialog/: CMakeLists.txt  osdialog.cpp  osdialog.h  osdialog_gtk2.cpp  osdialog_gtk3.cpp  osdialog_test  osdialog_win.cpp  test.cpp
src/json/: CMakeLists.txt  json.cpp  json.h
src/nuklear/: nuklear.h  nuklear_sdl_gl2.h
src/tests/: CMakeLists.txt  animated_counter_test  animated_counter_test.cpp  autosave_test.cpp  c_array_test.cpp  c_hashmap_test.cpp  color_test.cpp  config_test.cpp  json_test.cpp  minkowski_hex_test.cpp  pic_test.cpp  player_test.cpp  utils_test.cpp
src/tests/cbehave/: CMakeLists.txt  apr_ring.h  cbehave.cpp  cbehave.h
src/tests/cbehave/rlutil/: rlutil.h
src/tinydir/: tinydir.h
