add_subdirectory(osdialog)
include_directories(
	${SDL2_INCLUDE_DIRS}
	${SDL2_IMAGE_INCLUDE_DIRS}
	${SDL2_MIXER_INCLUDE_DIRS})
set(CDOGSED_SOURCES
	char_editor.cpp
	editor_brush.cpp
	editor_ui.cpp
	editor_ui_cave.cpp
	editor_ui_color.cpp
	editor_ui_common.cpp
	editor_ui_objectives.cpp
	editor_ui_static.cpp
	editor_ui_static_additem.cpp
	editor_ui_weapons.cpp
	nk_window.cpp
	tile_brush.cpp
	ui_object.cpp)
set(CDOGSED_HEADERS
	char_editor.h
	editor_brush.h
	editor_ui.h
	editor_ui_cave.h
	editor_ui_color.h
	editor_ui_common.h
	editor_ui_objectives.h
	editor_ui_static.h
	editor_ui_static_additem.h
	editor_ui_weapons.h
	nk_window.h
	tile_brush.h
	ui_object.h)
add_library(cdogsedlib STATIC ${CDOGSED_SOURCES} ${CDOGSED_HEADERS})
target_link_libraries(cdogsedlib
	${SDL2_LIBRARY} osdialog)
